--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ thiserror = "1"
 bs58 = { version = "0.5", features = ["check"] }
 base64 = ">=0.21"
 drop_guard = { version = "0.3.0", optional = true }
-signature = "2"
+signature = { version = "2", features = ["std"] }
 serde = { version = "1", features = ["derive"] }
 rand_core = "^0.6"
 sha2 = { version = "0.10", default-features = false, features = ["std", "oid"] }
